--- a/.gitIgnore
+++ b/.gitIgnore
@@ -1,5 +1,7 @@
 flash-toy-sync-as2/bin/flash-toy-sync-as2.swf
+flash-toy-sync-as2/bin/flash-toy-sync-as2.exe
 flash-toy-sync-as3/bin/flash-toy-sync-as3.swf
+flash-toy-sync-as3/bin/flash-toy-sync-as3.exe
 flash-toy-sync-as2/src/*
 
 flash-toy-sync-as3/obj
