--- a/.gitIgnore
+++ b/.gitIgnore
@@ -8,6 +8,8 @@ flash-toy-sync-as2/src/*
 
 flash-toy-sync-as3/obj
 
+node_modules
+
 !flash-toy-sync-as2/src/core*
 !flash-toy-sync-as2/src/Main.as
 !flash-toy-sync-as2/src/VersionConfig.as
