Made each scene have it's own frame rate, for animations that changes the frame rate at runtime

--- a/intiface-bridge/package.json
+++ b/intiface-bridge/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "pkg -t win,linux index.js"
+    "build-win": "pkg -t win index.js",
+    "build-mac": "pkg -t mac index.js"
   },
   "author": "",
   "license": "MIT",
