--- a/intiface-bridge/package.json
+++ b/intiface-bridge/package.json
@@ -1,10 +1,19 @@
 {
   "name": "intiface-bridge",
-  "version": "0.1.0",
-  "description": "",
+  "version": "0.2.0",
+  "description": "A bridge to intiface",
   "main": "index.js",
   "scripts": {
-    "build": "pkg -t win,linux index.js"
+    "start": "electron .",
+    "debug": "electron --inspect=5858 .",
+    "app:dir": "electron-builder --dir",
+    "app:dist": "electron-builder"
+  },
+  "build": {
+    "appId": "com.intiface-bridge.app",
+    "win": {
+      "target": "portable"
+    }
   },
   "author": "",
   "license": "MIT",
@@ -14,6 +23,7 @@
     "websocket": "^1.0.34"
   },
   "devDependencies": {
-    "pkg": "^5.4.1"
+    "electron-builder": "^23.6.0",
+    "electron": "^24.1.2"
   }
 }
